Update homepage navigation to fix layout bug

--- a/assets/_sass/components/_post-block.scss
+++ b/assets/_sass/components/_post-block.scss
@@ -1,4 +1,5 @@
 .post-block {
+  clear: both;
   margin-top: 2rem;
   padding-top: 2rem;
   border-top: 1px solid $color__gray;
